<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMail" />

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvCuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblCuit" />

            <EditText
                android:id="@+id/edtCuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvMoneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMondeda" />

            <RadioGroup
                android:id="@+id/optMoneda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/optDolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOptDolar" />

                <RadioButton
                    android:id="@+id/optPesos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOptPeso" />
            </RadioGroup>


            <TextView
                android:id="@+id/tvMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMontInv" />

            <EditText
                android:id="@+id/edtMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tvDias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDiasInv" />

            <SeekBar
                android:id="@+id/seekDias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/tvDiasSeleccionados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10" />

            <TextView
                android:id="@+id/tvIntereses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAvisarVencimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblAvisarVencimiento" />

                <Switch
                    android:id="@+id/swAvisarVencimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/togAccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="New ToggleButton"
                android:textOff="@string/lblAccionVencimientoAcreditar"
                android:textOn="@string/lblAccionVencimientoRenovar" />

            <CheckBox
                android:id="@+id/chkAceptoTerminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CheckPlazo" />

            <Button
                android:id="@+id/btnHacerPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/BtnPlazo" />

            <TextView
                android:id="@+id/tvMensajes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="6"
                android:text="New Text" />
        </LinearLayout>


</ScrollView>
